# plasma-simplemenu

./: .kde-ci.yml  CMakeLists.txt  ChangeLog  Messages.sh
package/: metadata.desktop
package/contents/code/: tools.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: ActionMenu.qml  CompactRepresentation.qml  ConfigGeneral.qml  ItemGridDelegate.qml  ItemGridView.qml  MenuRepresentation.qml  main.qml
plugin/: actionlist.cpp  appentry.cpp  appsmodel.cpp  favoritesmodel.cpp  qmldir  rootmodel.cpp  rootmodel.h  runnermatchesmodel.cpp  simplemenudialog.cpp  simplemenudialog.h  simplemenuplugin.cpp  simplemenuplugin.h  wheelinterceptor.cpp
po/ar/: plasma_applet_org.kde.plasma.simplemenu.po
po/az/: plasma_applet_org.kde.plasma.simplemenu.po
po/be/: plasma_applet_org.kde.plasma.simplemenu.po
po/ca/: plasma_applet_org.kde.plasma.simplemenu.po
po/ca@valencia/: plasma_applet_org.kde.plasma.simplemenu.po
po/cs/: plasma_applet_org.kde.plasma.simplemenu.po
po/da/: plasma_applet_org.kde.plasma.simplemenu.po
po/de/: plasma_applet_org.kde.plasma.simplemenu.po
po/el/: plasma_applet_org.kde.plasma.simplemenu.po
po/en_GB/: plasma_applet_org.kde.plasma.simplemenu.po
po/eo/: plasma_applet_org.kde.plasma.simplemenu.po
po/es/: plasma_applet_org.kde.plasma.simplemenu.po
po/et/: plasma_applet_org.kde.plasma.simplemenu.po
po/eu/: plasma_applet_org.kde.plasma.simplemenu.po
po/fi/: plasma_applet_org.kde.plasma.simplemenu.po
po/fr/: plasma_applet_org.kde.plasma.simplemenu.po
po/gl/: plasma_applet_org.kde.plasma.simplemenu.po
po/he/: plasma_applet_org.kde.plasma.simplemenu.po
po/hi/: plasma_applet_org.kde.plasma.simplemenu.po
po/hu/: plasma_applet_org.kde.plasma.simplemenu.po
po/ia/: plasma_applet_org.kde.plasma.simplemenu.po
po/is/: plasma_applet_org.kde.plasma.simplemenu.po
po/it/: plasma_applet_org.kde.plasma.simplemenu.po
po/ja/: plasma_applet_org.kde.plasma.simplemenu.po
po/ka/: plasma_applet_org.kde.plasma.simplemenu.po
po/ko/: plasma_applet_org.kde.plasma.simplemenu.po
po/lt/: plasma_applet_org.kde.plasma.simplemenu.po
po/nb/: plasma_applet_org.kde.plasma.simplemenu.po
po/nl/: plasma_applet_org.kde.plasma.simplemenu.po
po/nn/: plasma_applet_org.kde.plasma.simplemenu.po
po/pa/: plasma_applet_org.kde.plasma.simplemenu.po
po/pl/: plasma_applet_org.kde.plasma.simplemenu.po
po/pt/: plasma_applet_org.kde.plasma.simplemenu.po
po/pt_BR/: plasma_applet_org.kde.plasma.simplemenu.po
po/ro/: plasma_applet_org.kde.plasma.simplemenu.po
po/ru/: plasma_applet_org.kde.plasma.simplemenu.po
po/sk/: plasma_applet_org.kde.plasma.simplemenu.po
po/sl/: plasma_applet_org.kde.plasma.simplemenu.po
po/sv/: plasma_applet_org.kde.plasma.simplemenu.po
po/ta/: plasma_applet_org.kde.plasma.simplemenu.po
po/tr/: plasma_applet_org.kde.plasma.simplemenu.po
po/uk/: plasma_applet_org.kde.plasma.simplemenu.po
po/vi/: plasma_applet_org.kde.plasma.simplemenu.po
po/zh_CN/: plasma_applet_org.kde.plasma.simplemenu.po
po/zh_TW/: plasma_applet_org.kde.plasma.simplemenu.po
